# optical-character-recognition

./: .gitignore  README.md  Traffic_Signs_Recognition.ipynb  augment.py  pyproject.toml  traffic.py
